examples/test/testpolicy19141.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19141
  namespace: namespace92
spec:
  podSelector:
    matchLabels:
      key15: value15
      key17: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value6
          key23: value40
          key20: value4
      podSelector:
        matchLabels:
          key10: value46
          key27: value43
